More decriptions for p_e,S,W plots in p3.

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -1392,10 +1392,16 @@ $p_{eFq}$ проявляет меньшее значение ошибок для
 на линейность $q(p)$ метод становится неработоспособным при
 излишне чувствительной функции качества.
 И наконец, поверхность графика для метода $p_{eFc}$,
-практически одинаковая для всех рассмотренных условий,
+практически одинаковая для всех рассмотренных вариантов,
 подтверждает его слабую применимость.
 
 
+
+На рис.~\ref{atu:f:qsl_S_po_qg_all} представлены зависимости $S(p_o,q_\gamma)$
+при полном комплекте нелинейных членов (\ref{atu:eq:q_dem_all}),
+т.е. при тех же условиях, при которых был получен рис.~\ref{atu:f:qsl_pe_po_qg_all}.
+Использовалось определение (\ref{atu:eq:S3}), как потенциально более
+адекватное ошибке идентификации.
 
 \begin{figure}[htb!]
   \centerline{
@@ -1409,6 +1415,19 @@ $p_{eFq}$ проявляет меньшее значение ошибок для
   \label{atu:f:qsl_S_po_qg_all}
 \end{figure}
 
+Для метода $p_{eql}$ близкие к единице значения $S$, как и планировалось,
+наблюдаются в тех же областях, где и низкий уровень ошибки идентификации,
+в первую очередь --- внутри рабочего диапазона. При этом,
+рассматриваемая величина не повторяет уровень ошибки, так как
+это невозможно определить по трём точкам. Метод
+$p_{eFq}$ также характеризуется достаточно осмысленным видом этой зависимости,
+включая низкий уровень уверенности при завышенной чувствительности функции качества.
+Напротив, для метода $p_{eFc}$ график показывает, что для него
+данное определение $S$ не имеет смысла.
+
+
+На рис.~\ref{atu:f:qsl_S_po_qg_s20} представлены аналогичные зависимости,
+но из нелинейных членов оставлен самый высокочастотный (\ref{atu:eq:q_dem_s20}).
 
 \begin{figure}[htb!]
   \centerline{
@@ -1422,6 +1441,18 @@ $p_{eFq}$ проявляет меньшее значение ошибок для
   \label{atu:f:qsl_S_po_qg_s20}
 \end{figure}
 
+По сравнению с предыдущим случаем, график для метода $p_{eql}$
+имеет ненамного больший охват, при сохранении общей формы.
+Это связано с тем, что для данного случая $k_l=1$,
+диапазон уверенного определения $p_e$ соответственно расширяется,
+что даже избыточно подтверждается невозрастающим уровнем ошибок.
+Изменения для метода $p_{qFq}$ не столь заметны,
+так как для него не учитывается оценка уровня линейности.
+Для метода $p_{eFc}$ сохраняется бессмысленная зависимость.
+
+На рис.~\ref{atu:f:qsl_S_po_qg_lin} представлены те же зависимости зависимости,
+но в линейном случае (\ref{atu:eq:q_dem_lin}).
+
 \begin{figure}[htb!]
   \centerline{
     \includegraphics[width=0.32\textwidth]{p/qls_pe-p_po_qg_Sql_lin.png}
@@ -1433,6 +1464,14 @@ $p_{eFq}$ проявляет меньшее значение ошибок для
   \caption{Зависимости $S(p_o,q_\gamma)$ для методов $p_{eql}$, $p_{eFq}$, $p_{qFc}$ для условий (\ref{atu:eq:q_dem_lin})}
   \label{atu:f:qsl_S_po_qg_lin}
 \end{figure}
+
+Принципиальной разницы с предыдущими графиками нет, так отличие
+в условиях проявляется на относительно мелком масштабе,
+и не влияет на довольно грубую оценку $S$.
+
+На рис.~\ref{atu:f:qsl_W_po_qg_all}, \ref{atu:f:qsl_W_po_qg_s20}, \ref{atu:f:qsl_W_po_qg_lin},
+представлены зависимости $W(p_o,q_\gamma)$
+для всех рассмотренных вариантов.
 
 \begin{figure}[htb!]
   \centerline{
@@ -1470,6 +1509,15 @@ $p_{eFq}$ проявляет меньшее значение ошибок для
   \caption{Зависимости $W(p_o,q_\gamma)$ для методов $p_{eql}$, $p_{eFq}$, $p_{qFc}$ для условий (\ref{atu:eq:q_dem_lin})}
   \label{atu:f:qsl_W_po_qg_lin}
 \end{figure}
+
+Наиболее серьезное отличие от зависимостей $S(p_o,q_\gamma)$ наблюдается
+для метода $p_{eql}$ --- начинает играть роль ``штраф'' за
+избыточную чувствительность функции качества, которая в самом методе
+практически не используется. Однако, для рассматриваемой области,
+вблизи рабочего диапазона, отличие $W$ от $S$ не имеет особого значения.
+Основное предназначение $W$ --- ограничивать динамику агентов,
+находящихся вдали от искомого значения~$p_o$.
+
 
 Во второй серии вычислительных экспериментов
 значение параметра объекта
