Rework classification in p3.

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -2050,35 +2050,54 @@ $F$, а в оценке используется только ближайшая
 \begin{enumerate}
 
   \item  Первый символ определяет, какая величина ($q$ или $F$) используется
-    каждым агентом для определения $p_e$. Соответственно, первый символ
+    каждым агентом для определения $p_e$. Соответственно, первым символом
     будет ``q'' или ``F''.
     Для обозначения методов, для которых в качестве критерия используется
-    непосредственно выходы моделей и объектов, использует символ ``x''.
+    непосредственно выходы моделей и объектов, будет использоваться символ ``x''.
     При необходимости, при появлении новых подходов,
     могут быть назначены дополнительные символы.
 
   \item
-    Второй символ задаёт способ определения идентифицируемого параметра по всему ансамблю:
+    Второй символ задаёт способ определения величины $p_e$
+    одним агентом.
+
     \begin{description}
 
-      \item[b]  --- ``best'' --- выбирается лучший агент без дальнейшей обработки;
+      \item[l]  --- ``linear'' --- используется линейная аппроксимация, возможно кусочно-линейная;
 
-      \item[g]  --- ``global COG'' --- метод ``Center of Gravity'' по всему ансамблю~(\ref{atu:eq:p_ge});
+      \item[q]  --- ``quadratic'' --- используется аппроксимация второго порядка;
 
-      \item[l] --- ``local COG'' ---   метод ``Center of Gravity'' по окрестности лучшего агента~(\ref{atu:eq:p_le});
+      \item[с] --- ``COG'' ---  метод ``Center of Gravity'' по окрестности агента;
 
-      \item[e] --- квадратическая интерполяция по $F$ в окрестности лучшего агента~(\ref{atu:eq:p_eFq});
+      \item[i] --- ``implicit'' --- в явном виде $p_e$ не задаётся, динамика агента задаётся в неявном виде;
 
-      \item[x] --- ``extremum COG'' --- вариант ``Center of Gravity'' по всему ансамблю, при этом
-        от каждого агента используются величины $p_e$ и $FS$.
+      \item[s] --- ``special'' --- способ определения выбран на основании особых априорных сведений о виде зависимости $q(p)$;
 
     \end{description}
 
-    В случае, если вместо ансамбля используется 1--2 агента, то для определённости будет
-    использован символ ``b''
+  \item
+    Третий символ определяет локальную поисковую геометрию, чаще всего --- количество агентов в
+    в поисковой группе, например: ``2'' --- поисковая пара, ``3'' --- триплет.
+    При применении методов, использующих только один поисковый агент,
+    этот элемент классификации указывает количество моделей, управляемых этим агентом.
 
   \item
-    Третий символ обозначает выбранную зависимость для величины $f_e$ (или аналогичной величины, если $f_e$ напрямую не используется):
+    Четвёртый символ, описывает
+    поведение дополнительных моделей, находящихся на границе:
+    \begin{description}
+
+      \item[z]  --- ``zero'' --- реальная модель не используется, функция качества $F$ для неё считается нулевой;
+
+      \item[r] --- ``real'' ---  используется реальная модель, но без возможности её смещения;
+
+      \item[а] --- ``approximate'' --- значение критерия и функции качества каким-то образом аппроксимируются;
+
+      \item[n] --- ``none'' --- дополнительные модели не используются;
+
+    \end{description}
+
+  \item
+    Пятый символ обозначает выбранную зависимость для величины $f_e$ (или аналогичной величины, если $f_e$ напрямую не используется):
     \begin{description}
 
       \item[c]  --- ``const'' --- величина $f_e$ не участвует в описании
@@ -2093,9 +2112,22 @@ $F$, а в оценке используется только ближайшая
 
     \end{description}
 
+  \item
+    Шестой символ определяет множитель, используемый для величины $f_e$ при определении динамики объекта:
+    \begin{description}
+
+      \item[o]  --- ``one'' --- дополнительный множитель не используется (=1);
+
+      \item[F] ---  используется значение функции качества;
+
+      \item[S] --- используется значение ``уверенности'';
+
+      \item[W] --- используется значение ``достоинства''.
+
+    \end{description}
 
   \item
-    Четвёртый символ указывает, каким образом величина $f_t$ (или её эквивалент) влияет на динамику агента:
+    Седьмой символ указывает, каким образом величина $f_t$ (или её эквивалент) влияет на динамику агента:
     \begin{description}
 
       \item[z]  --- ``zero'' --- агент неподвижен;
@@ -2109,7 +2141,7 @@ $F$, а в оценке используется только ближайшая
     \end{description}
 
   \item
-    Пятый символ позволяет указать, какое дополнительное поисковое движение
+    Восьмой символ позволяет указать, какое дополнительное поисковое движение
     реализует агент
     \begin{description}
 
@@ -2123,69 +2155,94 @@ $F$, а в оценке используется только ближайшая
 
       \item[s] --- ``sin'' ---  используется гармоническое поисковое движение, применяемое, например, методом синхронного детектора;
 
-      \item[r] --- ``random'' ---  используется случайное поисковое движение (различные варинты случайного поиска).
+      \item[r] --- ``random'' ---  используется случайное поисковое движение (различные варианты случайного поиска).
 
     \end{description}
 
-  \item
-    Следующая группа символов указывает количество активных агентов.
-    В одномерном случае это или просто число, или символ ``N'', если
-    конкретное количество несущественно. В двумерном случае
-    используются варианты ``NxM'' для сеточного расположения агентов,
-    и ``NpM'  --- для конфигурации ``крест''. В случае большей размерности
-    пространства параметров можно использовать аналогичные обозначения,
-    но, при необходимости, с дополнительными индексами, например:
-    ``10x10p5'', ``$\mathrm{N_1 p N_2 x N_3 p N_4}$''.
+
+
 
   \item
-    Следующий символ, записанный после символа ``.'' указывает количество агентов в
-    в поисковой группе, например: ``2'' --- поисковая пара, ``3'' --- триплет.
-    При применении методов, использующих только один поисковый агент,
-    этот элемент классификации указывает количество моделей, управляемых этим агентом.
-
-  \item Восьмой символ, указываемый при необходимости, описывает
-    поведение дополнительных моделей, находящихся на границе:
+     Девятый символ задаёт способ определения идентифицируемого параметра по всему ансамблю:
     \begin{description}
 
-      \item[z]  --- ``zero'' --- реальная модель не используется, функция качества $F$ для неё считается нулевой;
+      \item[b]  --- ``best'' --- выбирается лучший агент без дальнейшей обработки;
 
-      \item[r] --- ``real'' ---  используется реальная модель, но без возможности её смещения;
+      \item[g]  --- ``global COG'' --- метод ``Center of Gravity'' по всему ансамблю~(\ref{atu:eq:p_ge});
 
-      \item[а] --- ``approximate'' --- значение критерия и функции качества каким-то образом аппроксимируются;
+      \item[l] --- ``local COG'' ---   метод ``Center of Gravity'' по окрестности лучшего агента~(\ref{atu:eq:p_le});
+
+      \item[q] --- интерполяция второго порядка в окрестности лучшего агента~(\ref{atu:eq:p_eFq});
+
 
     \end{description}
+
+    В случае, если вместо ансамбля используется 1--2 агента, то для определённости будет
+    использован символ ``b''
+
+
+  \item
+     Десятый символ определяет, какой из выходных сигналов поискового агента используется
+    \begin{description}
+
+      \item[с]  ---  используется $p_c$;
+
+      \item[e]  --- используется $p_e$.
+
+    \end{description}
+
 
 \end{enumerate}
 
-При необходимости, в конец данного обозначения, через точку, добавляется обозначение используемого критерия.
-Дополнительное компоненты добавляются в конец после двоеточия. Для обозначения подмножеств методов
+Если возникает потребность указать конкретный вид критерия,
+то в конец данного обозначения, через точку, добавляется обозначение используемого критерия.
+Для обозначения подмножеств методов
 вместо обозначения элемента используется символ ``A'' --- ``any''.
+
+Дополнительное компоненты добавляются в конец после двоеточия.
+При необходимости, дополнительно может быть указана группа символов, обозначающая количество
+и расположение активных агентов.
+В одномерном случае это или просто число, или символ ``N'', если
+конкретное количество несущественно. В двумерном случае
+используются варианты ``NxM'' для сеточного расположения агентов,
+и ``NpM'  --- для конфигурации ``крест''. В случае большей размерности
+пространства параметров можно использовать аналогичные обозначения,
+но, при необходимости, с дополнительными индексами, например:
+``10x10p5'', ``$\mathrm{N_1 p N_2 x N_3 p N_4}$''.
+
 
 
 Примеры обозначений:
+% ``Fglv5.3z.$q_{x^2}$''
+``Fc3zlovngc.$q_{x^2}$:5''
+--- метод, агенты которого
+для оценивания величины $p_e$ используют функцию качества и квадратичную аппроксимацию
+по данным каждых трёх соседних агентов, 2 псевдомодели на границе,
+зависимость $f_e(p_e-p_c)$ --- линейная,``вязкая'' динамика,
+единичный коэффициент при этой силе,
+``global COG'' для результирующего значения параметра по значением $p_c$,
+критерий ``$q_{x^2}$'', 5 подвижных агентов.
 
-``Fglv5.3z.$q_{x^2}$'' --- Метод, использующий 5 подвижных (3 триплета) и 2 ``fake'' модели,
-``global COG'' для результирующего значения параметра
-для оценивания величины $p_e$ используется функция качества,
-зависимость $f_e$ от $p_e$ --- линейная, ``вязкая'' динамика, критерий ``$q_{x^2}$''.
 
+%``qAuv7.3r.$q_{dx}$''
+``ql3ruWvnAe''
+--- группа методов,
+для оценивания величины $p_e$ используется критерий и линейная аппроксимацию на триплетах агентов,
+2 настоящие модели на границах,
+зависимость $f_e$ от $p_e$ --- с насыщением и множителем $W$, ``вязкая'' динамика,
+используются все доступные методы для определения  результирующего значения параметра
+по значениям $p_e$.
 
-``qAuv7.3r.$q_{dx}$'' --- Методы, использующий 7 подвижных (5 триплетов) и 2 ``real'' модели на границах,
-для оценивания величины $p_e$ используется значение критерия,
-зависимость $f_e$ от $p_e$ --- с насыщением, ``вязкая'' динамика, критерий ``$q_{dx}$'',
-используются все доступные методы для определения  результирующего значения параметра.
+``xi1nlostbc'' --- Оригинальный адаптивно-поисковый метод.
 
-``xblst1'' --- Оригинальный адаптивно-поисковый метод.
-
-``xblvd1.2'' --- Адаптивно-поисковый метод с двумя моделями и двумя УГПК с общим сбросом
+``xl2nlosdlc'' --- Адаптивно-поисковый метод с двумя моделями и двумя УГПК с общим сбросом
  и непосредственным использованием выходов объекта и моделей.
 
-``Fblvd1.2.$q_{x^2}$'' --- Адаптивно-поисковый метод с двумя моделями и двумя УГПК с общим сбросом,
+``Fl2nlsd.$q_{x^2}$'' --- Адаптивно-поисковый метод с двумя моделями и двумя УГПК с общим сбросом,
  использующий функцию качества применительно к критерию $q_{x^2}$.
 
-``Fgcz7x7.1'' --- Сетка из 49 ($7 \times 7$) неподвижных моделей,
-``global COG'' для результирующего значения параметра,
-без указания конкретного критерия.
+\Cmt{Может имеет смысл использовать псевдонимы для самых полезных или часто используемых методов?}
+
 
 % }}}1
 
