Fix classification - add last char

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -1928,17 +1928,17 @@ $\nu$ --- коэффициент условной вязкости.
 использовать значение $p_c$ той модели, для которой функция качества максимальна:
 %
 \begin{equation}
-  p_{bm}
+  p_{bc}
   =
   p_{c,i};
   \quad
   i : F_i = \max{F_j}, \, j=0 \ldots N-1 .
-  \label{atu:eq:p_b}
+  \label{atu:eq:p_bc}
 \end{equation}
 
 Единственным достоинством данного метода является простота реализации.
 При этом, никак не используются аппроксимирующие способности агентов.
-Более того, зависимость $p_{bm}(t)$ подвержена
+Более того, зависимость $p_{bc}(t)$ подвержена
 скачкообразным изменением в момент переключения
 с одной модели на другую.
 
@@ -1948,19 +1948,19 @@ $\nu$ --- коэффициент условной вязкости.
 
 Следующий метод --- реализация
 метода COG (Center of gravity, Такаги-Сугено) \cite{atu_asau25,atu_csit2015,atu_asau16},
-используемого при дефаззификации систем нечёткой логики:
+используемого при дефаззификации систем нечёткой логики для всего ансамбля:
 %
 \begin{equation}
-  p_{ge}
+  p_{gc}
   =
   \frac{\sum\limits_{i=0}^{N-1} F_{i} p_{i}}
        {\sum\limits_{i=0}^{N-1} F_{i} }
   .
-  \label{atu:eq:p_ge}
+  \label{atu:eq:p_gc}
 \end{equation}
 
 Этот метод можно модифицировать, используя аппроксимирующие свойства самих агентов.
-Для этого в качестве значения параметра в формуле (\ref{atu:eq:p_ge})
+Для этого в качестве значения параметра в формуле (\ref{atu:eq:p_gc})
 вместо текущего значения параметра $p_c$ агента следует использовать
 аппроксимированное значение $p_e$, обозначив его для
 модели номер $i$ как $p_{e,i}$. Так как этому значению
@@ -1970,17 +1970,17 @@ $\nu$ --- коэффициент условной вязкости.
 $F_i \cdot S_i$. Тогда обозначим
 %
 \begin{equation}
-  p_{xe}
+  p_{ge}
   =
   \frac{\sum\limits_{i=0}^{N-1} F_{i} S_i p_{e,i}}
        {\sum\limits_{i=0}^{N-1} F_{i} S_i }
   .
-  \label{atu:eq:p_xe}
+  \label{atu:eq:p_ge}
 \end{equation}
 
 Использование в подобных выражениях только $S_i$ без $F_i$
-практического смысла не имеет,
-так как $S-i$ --- локальное свойство агента, и этом случае агенты,
+предположительно практического смысла не имеет,
+так как $S$ --- локальное свойство агента, и этом случае агенты,
 находящиеся вдали от искомой точки, но ``достаточно уверенно'' определившие $p_e$
 на основании локальных возмущений, будут учитываться наравне с теми
 агентами, которые в самом деле близки к искомому значению $p$.
@@ -1991,14 +1991,14 @@ $F_i \cdot S_i$. Тогда обозначим
 $F$, а в оценке используется только ближайшая окрестность этой модели:
 %
 \begin{equation}
-  p_{le}
+  p_{lc}
   =
-  \frac{ F_{i-1} p_{i-1} + F_{i} p_{i} + F_{i+1} p_{i+1} }
-       { F_{i-1}         + F_{i}       + F_{i+1}         }
+  \frac{ F_{i-1} p_{c,i-1} + F_{i} p_{c,i} + F_{i+1} p_{c,i+1} }
+       { F_{i-1}           + F_{i}         + F_{i+1}         }
   ;
   \quad
   i : F_i = \max{F_j}, \, j=0 \ldots N-1 .
-  \label{atu:eq:p_le}
+  \label{atu:eq:p_lc}
 \end{equation}
 %
 или, с учётом введённых локальных обозначений при $i=c$:
@@ -2009,7 +2009,7 @@ $F$, а в оценке используется только ближайшая
   \frac{ F_{l} p_{l} + F_{c} p_{c} + F_{r} p_{r} }
        { F_{l}       + F_{c}       + F_{r}       }
   .
-  \label{atu:eq:p_lel}
+  \label{atu:eq:p_lcl}
 \end{equation}
 
 Ошибки идентификации в пространстве параметров
@@ -2171,9 +2171,9 @@ $F$, а в оценке используется только ближайшая
 
       \item[b]  --- ``best'' --- выбирается лучший агент без дальнейшей обработки;
 
-      \item[g]  --- ``global COG'' --- метод ``Center of Gravity'' по всему ансамблю~(\ref{atu:eq:p_ge});
+      \item[g]  --- ``global COG'' --- метод ``Center of Gravity'' по всему ансамблю~(\ref{atu:eq:p_gc});
 
-      \item[l] --- ``local COG'' ---   метод ``Center of Gravity'' по окрестности лучшего агента~(\ref{atu:eq:p_le});
+      \item[l] --- ``local COG'' ---   метод ``Center of Gravity'' по окрестности лучшего агента~(\ref{atu:eq:p_lc});
 
       \item[q] --- интерполяция второго порядка в окрестности лучшего агента~(\ref{atu:eq:p_eFq});
 
@@ -2194,6 +2194,18 @@ $F$, а в оценке используется только ближайшая
 
     \end{description}
 
+  \item
+     Одиннадцатый символ указывает, какая величина используется для задания веса каждого агента:
+    \begin{description}
+
+      \item[F]  ---  используется $F_c$;
+
+      \item[S]  --- используется $S$, без дополнительного уточнения --- $S_{3}$ (\ref{atu:eq:S3});
+
+      \item[W]  ---  используется $W$.
+
+    \end{description}
+
 
 \end{enumerate}
 
@@ -2201,6 +2213,8 @@ $F$, а в оценке используется только ближайшая
 то в конец данного обозначения, через точку, добавляется обозначение используемого критерия.
 Для обозначения подмножеств методов
 вместо обозначения элемента используется символ ``A'' --- ``any''.
+Этим же символом будем обозначать ситуацию,
+когда выбор для данного компонента классификации не имеет смысла.
 
 Дополнительное компоненты добавляются в конец после двоеточия.
 При необходимости, дополнительно может быть указана группа символов, обозначающая количество
@@ -2217,31 +2231,31 @@ $F$, а в оценке используется только ближайшая
 
 Примеры обозначений:
 % ``Fglv5.3z.$q_{x^2}$''
-``Fc3zlovngc.$q_{x^2}$:5''
+``Fc3zlovngcW.$q_{x^2}$:5''
 --- метод, агенты которого
 для оценивания величины $p_e$ используют функцию качества и квадратичную аппроксимацию
 по данным каждых трёх соседних агентов, 2 псевдомодели на границе,
 зависимость $f_e(p_e-p_c)$ --- линейная,``вязкая'' динамика,
 единичный коэффициент при этой силе,
-``global COG'' для результирующего значения параметра по значением $p_c$,
+``global COG'' для результирующего значения параметра по значением $p_c$ и $W$,
 критерий ``$q_{x^2}$'', 5 подвижных агентов.
 
 
 %``qAuv7.3r.$q_{dx}$''
-``ql3ruWvnAe''
+``ql3ruWvnAeF''
 --- группа методов,
 для оценивания величины $p_e$ используется критерий и линейная аппроксимацию на триплетах агентов,
 2 настоящие модели на границах,
 зависимость $f_e$ от $p_e$ --- с насыщением и множителем $W$, ``вязкая'' динамика,
 используются все доступные методы для определения  результирующего значения параметра
-по значениям $p_e$.
+по значениям $p_e$ и $F_c$.
 
-``xi1nlostbc'' --- Оригинальный адаптивно-поисковый метод.
+``xi1nlostbcA'' --- Оригинальный адаптивно-поисковый метод.
 
-``xl2nlosdlc'' --- Адаптивно-поисковый метод с двумя моделями и двумя УГПК с общим сбросом
+``xl2nlosdlcA'' --- Адаптивно-поисковый метод с двумя моделями и двумя УГПК с общим сбросом
  и непосредственным использованием выходов объекта и моделей.
 
-``Fl2nlsd.$q_{x^2}$'' --- Адаптивно-поисковый метод с двумя моделями и двумя УГПК с общим сбросом,
+``Fl2nlsdlcA.$q_{x^2}$'' --- Адаптивно-поисковый метод с двумя моделями и двумя УГПК с общим сбросом,
  использующий функцию качества применительно к критерию $q_{x^2}$.
 
 \Cmt{Может имеет смысл использовать псевдонимы для самых полезных или часто используемых методов?}
