More words about p_e methods

--- a/atudiss.tex
+++ b/atudiss.tex
@@ -37,7 +37,7 @@
 
 %\newcommand{\LinkRef}[1]{ \textit{\color{red}#1} }
 \newcommand{\LinkRef}[1]{}
-\newcommand{\Cmt}[1]{ {\small\color{red}#1} }
+\newcommand{\Cmt}[1]{ {\small\color{red}#1\color{black}.} }
 %\newcommand{\Cmt}[1]{}
 
 \clubpenalty9990
