Move some general words from aref.

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -116,17 +116,15 @@
 {~}
 &
 доктор фіз.-мат. наук, професор,\newline
-\textbf{Білозьоров~Василь Євгенович}
-професор кафедри комп`ютерних технологій
-Дніпропетровського національного університету
-ім.~Олеся Гончара.
+\textbf{XXX}
+професор .
 \\
 {~} & {~}
 \\
 &
 доктор технічних наук, професор,\newline
-\textbf{Бідюк Петро Іванович},
-  професор кафедри математичних методів системного аналізу ННК ``ІПСА'' НТУУ ``КПІ'' ім.~Ігоря Сікорського;
+\textbf{XXX},
+  ---
 \\
 {~} & {~}
 \\
