--- a/p0/p0.tex
+++ b/p0/p0.tex
@@ -4,6 +4,43 @@
 \paragraph{Актуальность темы}.
 \pdfbookmark[1]{Актуальность темы}{actualitybookmark}
 
+Нелінійні динамічні системи, широко представлені в сучасних технологічних і
+природних процесах, незважаючи на детермінізм їх визначення, можуть проявляти
+хаотичні властивості в своїй динаміці. При цьому як завгодно малі збурення у вхідних
+впливах і параметрах самої системи призводять до значних, але кінцевим збуренням
+вихідного сигналу. Це призводить до певних труднощів при конструюванні,
+управлінні і прогнозі поведінки таких систем.
+
+При математичному та комп'ютерному моделюванні систем динамічного хаосу
+виникають специфічні для даних систем проблеми. Перш за все -- потрібно
+забезпечити наявність працездатного критерію адекватності моделі. Для задач
+ідентифікації наявність такого критерію є принциповим. Найбільш часто
+використовувані при моделюванні поведінки динамічних систем критерії, засновані
+на звичних заходи в просторі вихідних сигналів, виявляються непрацездатними. З
+іншого боку, спеціальні характеристики оцінювання хаотичних властивостей динамічних
+систем, такі як фрактальна розмірність, показник Ляпунова, перетин Пуанкаре,
+недостатньо інформативні для задачі ідентифікації через обмежений діапазон
+змін, великою похибкою при їх вимірі для реальних систем і суттєвою
+обчислювальною складністю.
+
+У якості прототипу для синтезу нових методів ідентифікації доцільно обрати ряд
+методів ідентифікації, які було розроблено та досліджено у роботах
+П.~Ейкхоффа, Л.А.~Растрігіна, Л.Н.~Фіцнера, Е.Є.~Гачинського,
+А.І.~Дроздова, О.І.~Михальова, зокрема пошукові та адаптивно-пошукові
+методи.
+
+Також вважається доцільним використання як основи
+наступного класу двомодельних адаптивно-пошукових методів,
+які було розроблено та досліджено у попередньої роботі.
+Проте, результати моделювання процесів ідентифікації цими методами
+технічних об'єктів, які проявляють складну та хаотичну динаміку, показали
+їх повну або обмежену непридатність.
+
+
+Тому проблема ідентифікації динамічних систем, які проявляють хаотичну
+динаміку, або близьку до хаотичної, є
+\textit{актуальною}.
+
 Синтез систем идентификации для сложных нелинейных динамических систем
 был и остаётся сложной задачей. Невозможность определения
 аналитической зависимости значений идентифицируемых параметров
@@ -16,107 +53,235 @@
 систем определяется наличием интегрального критерия,
 учитывающего динамику системы и зависящего от идентифицируемых параметров.
 
-\paragraph{Связь работы с научными программами, планами, темами.}
+\paragraph{Зв'язок роботи з науковими програмами, планами, темами.}
 \pdfbookmark[1]{Связь работы с ...}{sciencelinkbookmark}
-Диссертационная работы выполнялась в соответствии с 
 
-\paragraph{Цель и задания исследования.}
-\pdfbookmark[1]{Цель и задания исследования}{aimandtaskbookmark}
-Целью диссертационной работы является
-
-Достижение этой цели требует решения следующих задач:
+Дисертаційна робота виконувалась у рамках науково-дослідних робіт
+Національної металургійної академії України за держбюджетною
+тематикою:
 
 \begin{itemize}
 
-\item
-  создать новые критерии идентификации, которые, в отличие от существующих,
-  были бы применим для анализа состояния, динамики и решения задач идентификации
-  хаотических систем;
 
 \item
-  развить существующие и создать новые методы поисковой идентификации,
-  которые в полной мере использовали возможности
-  параллельных вычислений и преимущества синергетического поведения
-  ансамбля моделей;
+  ``Вдосконалення технології утилізації в металургійній промисловості
+  матеріальних і енергетичних відходів'', №~держ. реєст. 0113U003266;
 
-\item
+  \item
+  ``Дослідження та імітаційне моделювання процесів нелінійної динаміки
+  формування фрактальних структур функціональних   покриттів'',
+  № держ. реєст. 0110U003240;
 
-
-\item
-
-\item
-
-\item
-  создать программное обеспечение, приспособленное как
-  для моделирования систем хаотической динамики,
-  так и для моделирования процессов идентификации таких систем;
-
-\item
-  провести компьютерное моделирование процессов идентификации систем хаотической динамики,
-  исследовать их работоспособность, возможности и характеристики.
-
+  \item
+  ``Наукове обґрунтування та розробка ефективних тепло-масообмінних
+  процесів в інноваційних металургійних технологіях'', №~держ. реєст 0115 U003176.
 
 \end{itemize}
 
+Результати було впроваджено у рамках науково-практичного дослідження
+``Оцінка    можливості заміни випробувань КА на стійкість до акустичного навантаження
+випробуваннями широкосмугової вібрації'', згідно договору №~V-105-16-3 від 07.09.2016.
+
+
+\paragraph{Мета і задачі дослідження}
+\pdfbookmark[1]{Цель и задания исследования}{aimandtaskbookmark}
+
+Головною метою дослідження є створення нових методів ідентифікації з
+використанням адаптивно-пошукових принципів настроювання параметрів, які
+були б придатні для створення моделей систем, які проявляють хаотичну
+та/або схожу на хаотичну динаміку. В свою чергу, окремо ставиться задача
+розв'язання наукової проблеми створення адекватних моделей процесів
+ідентифікації хаотичних систем з використанням запропонованих нових
+методів, аналізу та дослідження їх характеристик в умовах невизначеності.
+
+Для досягнення даної мети були поставлені наступні задачі:
+
+\begin{itemize}
+
+  \item
+  розробити нові критерії ідентифікації, які, на відміну від тих, що
+  існують, при моделюванні були б придатні для аналізу стану та динаміки
+  хаотичних систем, що створить обґрунтування працездатності систем
+  ідентифікації;
+
+  \item
+  розвинути існуючи та розробити нові методи пошуку, які б не мали
+  обмежень тих, що існують, та у повної мірі використовували можливості
+  паралельних обчислювань та переваг використання ансамблю
+  синергированних моделей;
+
+  \item
+  розвинути існуючи та розробити нові методи адаптації параметрів
+  системи ідентифікації, здатні пристосуватися до зміни режимів роботи
+  системи;
+
+  \item
+  розробити програмне забезпечення, придатне для моделювання як систем
+  хаотичної динаміки, так і систем ідентифікації;
+
+  \item
+  провести комп'ютерне моделювання процесів ідентифікації систем
+  хаотичної динаміки та дослідити їх працездатність, можливості та
+  характеристики.
+
+\end{itemize}
+
+
+
 \pdfbookmark[1]{Объект исследования}{objectresearchbookmark}
-\textit{Объект исследования} ---
-системы адаптивно-поисковой идентификации систем хаотической динамики.
+\textit{Об'єкт дослідження}  ---
+технічні системи, які в процесі їх функціювання можуть
+входити в хаотичні режими.
 
-\textit{Предмет исследования} ---
-математические модели систем адаптивно-поисковой идентификации систем хаотической динамики.
+\textit{Предметом дослідження} ---
+математичні моделі процесів та методи
+мультіагентної ідентифікації технічних систем з хаотичною динамікою.
 
-\textit{Методы исследования} ---
+\textit{Методи дослідження} ---
+Для вирішення поставлених задач використовувався математичний апарат
+теорії управління та ідентифікації нелінійних систем, динамічного хаосу,
+обчислювальних методів, нечіткої логіки, теорії інформації тощо.
 математический аппарат теории управления и идентификации,
-динамического хаоса,
-нечёткой логики,
-вычислительные методы,
-теория информации
 \ldots
 
 \pdfbookmark[1]{Научная новизна}{scinewbookmark}
-\paragraph{Научная новизна результатов диссертационной работы} заключается в
-развитии теории
+\paragraph{Наукова новизна одержаних результатів}
 
-Основные результаты, определяющие новизну диссертационной работы,
-состоят в следующем:
+Основний науковий результат полягає в розв'язанні науково-практичної проблеми
+синтезу методів ідентифікації
+технічних систем хаотичної динаміки, створенні відповідних математичних
+моделей та дослідженні результатів моделювання процесів
+адаптивно-пошукової ідентифікації.
+
+Основні наукові результати, що отримані в дисертаційної роботі, полягають
+в наступному:
+
+\noindent
+вперше:
 
 \begin{itemize}
 
-\item
-  впервые предложен комплексный подход к оцениванию параметров
+  \item
+  створено критерії ідентифікації нелінійних динамічних систем,
+  які, на відміну від тих, що існують, дозволяють оцінити їх стан та
+  хаотичну динаміку, та дають підстави для створення ефективних алгоритмів
+  настроювання параметрів моделей систем ідентифікації;
 
-\item
+  \item
+  створено методи адаптивно-пошукової ідентифікації на підставі
+  адаптивно-пошукової парадигми з використанням ансамблю пошукових агентів,
+  які взаємодіють проміж собою, які на відміну від методів, що використовують
+  одну модель або пару моделей, значно підвищують швидкість пошуку та
+  здатні за мінімальний час перестрілюватися при різкої зміні параметра, а на
+  відміну від ройових алгоритмів, нові методи потребують значно меншої
+  кількості моделей та забезпечують певні гарантії пошуку;
 
-\item
+  \item
+  створено нову класифікацію систем ідентифікації динамічних систем,
+  яка як вбирає у себе методи, що існують, так і дозволяє
+  створювати нові методи ідентифікації за рахунок
+  комбінування їх складових частин;
+
+  \item
+   визначено, що системи з сухим тертям з точки зору задачі ідентифікації
+   при певних  умовах функціонування
+   мають властивості, що поєднують їх з системами хаотичної динаміки, тобто з
+   системами хаотичної динаміки їх поєднує суттєва залежність від початкових
+   умов та вид атрактору, що також потребує використання нових методів ідентифікації;
+
+  \item
+   запропоновано модель системи хаотичної динаміки системи зв'язаних релаксаційних генераторів,
+   яка відрізняєшся від існуючих відсутністю індуктивних компонентів,
+   працездатністю при малих напругах та можливістю
+   керування частотним діапазоном у широкому діапазоні,
+   що сприяє процесу аналізу хаотичної динаміки
+   фізичного об'єкту, перевірки адекватності математичної моделі
+   та властивостей системи ідентифікації стосовно цієї системи.
+
 
 \end{itemize}
 
 
-\paragraph{Практическое значение полученных результатов.}
+\noindent
+Набуло подальший розвиток:
+\begin{itemize}
+
+  \item
+  методи оцінювання якості ідентифікації,
+  які на відміну від тих, що існують,
+  враховують використання множини агентів;
+
+  \item
+  підходи до адаптації параметрів систем
+  адаптивно-пошукової ідентифікації, які придатні використовувати поточну
+  інформацію від ансамблю сінергированих моделей, та корегувати глобальні
+  параметри пошуку;
+
+  \item
+    модель генератора Копітца, яка враховує
+    більшу кількість нелінійних ефектів,
+    що забезпечує більш адекватні результати процесу
+    ідентифікації її параметрів новими методами;
+
+\end{itemize}
+
+
+\paragraph{Практичне значення одержаних результатів}
 \pdfbookmark[1]{Практическое значение}{practicalusagebookmark}
-Разработанные методы исследования и математические модели
+
+Розроблені методи ідентифікації було використано
+при проектуванні, створенні, налаштовуванні параметрів
+стенду дослідження вібраційного та акустичного впливу.
+Аналіз результатів даних з цього стенду
+дав можливість указати потрібні нелінійні властивості системи,
+та діапазон параметрів, які у сукупності
+забезпечують широкосмуговий спектр коливань.
+
+Створене програмне середовище для моделювання нелінійних динамічних систем
+використається при проведенні практичних робіт по дисциплінам
+``Моделювання систем'',
+``Сучасні системи управління'' на кафедри інформаційних технологій
+і систем Національної металургійної академії України.
+
 
 Все результаты внедрения подтверждены соответствующими актами
 (Приложение А).
 
-\paragraph{Личный вклад соискателя.}
+\paragraph{Особистий внесок здобувача}
 \pdfbookmark[1]{Личный вклад}{personaladdbookmark}
-Все результаты диссертационной работы
-получены автором самостоятельно и опубликованы в работах [].
-В работах, опубликованных в соавторстве, автору
-принадлежат следующие результаты:
 
+Усі основні положення і результати
+дисертаційної роботи, які виносяться на захист, отримано здобувачем особисто та
+опубліковано в роботах [1--50]. У наукових працях, опублікованих у співавторстві,
+здобувачу належать наступні результати. У роботі [1] \ldots
 
-\paragraph{Апробация результатов диссертации.}
-Основные результаты проведенных исследований были представлены, докладывались и
-обсуждались на следующих научных конференциях:
+\paragraph{Апробація результатів}
 
-\paragraph{Публикации.}
-Основные результаты по теме диссертации изложены в XXX
-опубликованных работах: XXX статьях, из них XXX статьи в научных
-специализированных изданиях Украины, XXX статьи в международных изданиях,
-XXX публикация в сборниках материалов и тезисов докладов научно-технических
-конференций.
+Основні положення дисертаційної роботи доповідались на наукових
+семінарах кафедри ІТС,
+регіональному науковому семінарі Придніпровського Наукового Центру НАН України
+''Сучасні проблеми управління та моделювання складних систем'',
+науково-практичних коференціях:
+``Інформатика та системні науки'' (ІСН-2011) Полтава--2011,
+``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2011,
+``Информационные технологии в управлении сложными системами'' Днепропетровск--2011,
+``Автоматизация: проблемы, идеи, решения'' Севастополь-2011,
+``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2012,
+``Автоматизация: проблемы, идеи, решения'' Севастополь-2012,
+``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2013,
+``Автоматизация: проблемы, идеи, решения'' Севастополь-2013,
+``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2014,
+``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2015,
+``Computer Sciences and Information Technologies'' (CSIT) Lviv--2015 (Scopus),
+``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2016,
+``Data Stream Mining and Processing'' DSMP Lviv-2016 (Scopus,Web of Science).
 
+\paragraph{Публікації}
+
+По темі дисертації опубліковано
+49 друкована праця,
+з них
+24 входять до до міжнародних наукометрічних баз,
+13 статей опубліковано у матеріалах конференцій.
 
 
