Fix sign in quad approx

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -863,7 +863,7 @@ $q_c$ и $q_o$, так как $\tilde{q_c} = 1$ и $\tilde{q_o} = 0$.
 т.е $\tilde{q}_l > 1 $ и $\tilde{q}_r > 1  $.
 
 \begin{figure}[htb!]
-  \centerline{\includegraphics[width=50\TW]{p/pq_sin-p_pq_cgood.png} }
+  \centerline{\includegraphics[width=60\TW]{p/pq_sin-p_pq_cgood.png} }
   \caption{Конфигурация точек, соответствующая случаю 2A}
   \label{atu:f:pq_2A}
 \end{figure}
@@ -938,7 +938,7 @@ $ c_\mathrm{su}$ и достаточно ограниченное значени
 Центральная точка --- наихудшая~(рис.~\ref{atu:f:pq_2C}).
 
 \begin{figure}[htb!]
-  \centerline{\includegraphics[width=50\TW]{p/pq_sin-p_pq_cbad.png} }
+  \centerline{\includegraphics[width=60\TW]{p/pq_sin-p_pq_cbad.png} }
   \caption{Конфигурация точек, соответствующая случаю 2C}
   \label{atu:f:pq_2C}
 \end{figure}
@@ -968,7 +968,7 @@ $ c_\mathrm{su}$ и достаточно ограниченное значени
 а $q_c$ --- по другую, то есть существуют два корня в рассматриваемой области~(рис.~\ref{atu:f:pq_3}).
 
 \begin{figure}[htb!]
-  \centerline{\includegraphics[width=50\TW]{p/pq_sin-p_pq_double.png} }
+  \centerline{\includegraphics[width=60\TW]{p/pq_sin-p_pq_double.png} }
   \caption{Конфигурация точек, соответствующая случаю 3}
   \label{atu:f:pq_3}
 \end{figure}
@@ -1239,12 +1239,12 @@ $ ( p_c, F_c ) $. Тогда
 %
 \[
   a_1 = \frac{\tilde{F}_r \tilde{p}_l^2 - \tilde{F}_l \tilde{p}_r^2 }
-             { \tilde{p}_l^2 \tilde{p}_r  + \tilde{p}_l \tilde{p}_r^2 }.
+             { \tilde{p}_l^2 \tilde{p}_r  - \tilde{p}_l \tilde{p}_r^2 }.
 \]
 %
 \[
-  a_2 = \frac{\tilde{F}_r \tilde{p}_l - \tilde{F}_l \tilde{p}_r }
-             { \tilde{p}_l^2 \tilde{p}_r  + \tilde{p}_l \tilde{p}_r^2 }.
+  a_2 = - \frac{\tilde{F}_r \tilde{p}_l - \tilde{F}_l \tilde{p}_r }
+               { \tilde{p}_l^2 \tilde{p}_r  - \tilde{p}_l \tilde{p}_r^2 }.
 \]
 
 \begin{equation}
